# ForeverValidator

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  vcpkg.json
include/forevervalidator/: validation.h
include/forevervalidator/experimental/: physics_sandbox.h
src/app/cli/: forevervalidator.cpp
src/engine/core/: func_keys_real.h
src/engine/game/: trackmania_race.cpp  trackmania_race.h
src/engine/physics/collision/: hms_collision_manager.h
src/engine/physics/dynamics/: dyna_core.cpp  hms_dyna.h
src/engine/physics/geometry/: gm_surface.h  gmsurf_collision.h  plug_surface.cpp  plug_surface.h  plug_surface_collision.cpp
src/engine/physics/world/: hms_zone.h  physics_step.cpp
src/engine/scene/: scene_mobil.cpp  scene_mobil.h  scene_vehicle.cpp  scene_vehicle.h  scene_vehicle_car.cpp  scene_vehicle_car.h
src/format/pack/: default_vehicle_pack_archive.cpp
src/format/replay/: replay_file_reader.cpp  replay_input_timeline.h
src/format/static_solid/: static_solid_archive_feedback.h
src/simulation/backends/optimized_cpu/: optimized_cpu_backend.cpp  optimized_cpu_binary32_math.cpp  optimized_cpu_binary32_math.h  optimized_cpu_cached_collision_detection.cpp  optimized_cpu_cached_physics_step.cpp  optimized_cpu_cached_replay_physics_world.cpp  optimized_cpu_collision_detection.cpp  optimized_cpu_ellipsoid_mesh_query.cpp  optimized_cpu_model3_vehicle_forces.cpp  optimized_cpu_model3_vehicle_forces.h  optimized_cpu_native_binary32_collision.h  optimized_cpu_native_binary32_collision_detection.cpp  optimized_cpu_native_binary32_inline_mesh_queries.cpp  optimized_cpu_native_binary32_mesh_queries.cpp  optimized_cpu_native_binary32_physics_step.cpp  optimized_cpu_native_binary32_runtime_routing.cpp  optimized_cpu_static_bounds_overlap.h  optimized_cpu_static_inverse_mesh_queries.cpp  optimized_cpu_static_inverse_mesh_queries.h  optimized_cpu_static_mesh_triangle_sidecar.cpp  optimized_cpu_static_mesh_triangle_sidecar.h  optimized_cpu_static_scene_fingerprint.cpp  optimized_cpu_static_scene_fingerprint.h  optimized_cpu_static_surface_transform_cache.cpp  optimized_cpu_static_surface_transform_cache.h  optimized_cpu_static_triangle_mesh_query.cpp  optimized_cpu_static_triangle_mesh_query.h  optimized_cpu_static_uniform_grid.cpp  optimized_cpu_static_uniform_grid.h
src/simulation/replay/: replay_map_scene.h
src/simulation/runtime/: replay_physics_world.cpp  replay_physics_world.h  replay_simulation_runtime.cpp  replay_simulation_runtime.h  replay_simulation_session.cpp  replay_simulation_session.h  replay_vehicle_body.cpp  replay_vehicle_body.h  replay_vehicle_simulation.cpp  replay_vehicle_simulation.h  replay_vehicle_wheel_surfaces.cpp  replay_vehicle_wheel_surfaces.h
src/validation/api/: physics_sandbox_static_scene_test_access.h  validation_api.cpp
src/validation/evaluation/: replay_validation_evaluation.cpp
src/validation/serialization/: validation_json.cpp
tools/: optimized_cpu_benchmark.cpp  optimized_cpu_differential.cpp  optimized_cpu_ellipsoid_mesh_differential.cpp  optimized_cpu_model3_vehicle_differential.cpp  optimized_cpu_sphere_mesh_differential.cpp  optimized_cpu_static_bounds_overlap_differential.cpp  optimized_cpu_static_scene_lifecycle_differential.cpp  optimized_cpu_static_transform_cache_differential.cpp  optimized_cpu_static_triangle_sidecar_differential.cpp  run_optimized_cpu_benchmark.py
